--- a/watchlist.html
+++ b/watchlist.html
@@ -8,6 +8,7 @@
     <title>Watchlist</title>
   </head>
   <body>
+    <a href="index.html" class="buttonback2">Home</a>
     <div class="headers">
       <header class="header1">
         <h1>SEASON 1</h1>
@@ -19,7 +20,44 @@
 
     <div class="forms">
       <form class="season1">
-          
+        <div class="episodes">
+            <label>
+                <input data-points="1" type="checkbox" name="season1"/>Episode 1
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 2
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 3
+            </label>
+            <label>
+                <input data-points="1" type="checkbox" name="season1"/>Episode 4
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 5
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 6
+            </label>
+            <label>
+                <input data-points="1" type="checkbox" name="season1"/>Episode 7
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 8
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 9
+            </label>
+            <label>
+                <input data-points="1" type="checkbox" name="season1"/>Episode 10
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 11
+            </label>
+            <label>
+               <input data-points="1" type="checkbox" name="season1"/>Episode 12
+            </label>
+        </div>
       </form>
       <form class="season2">
 
