watchlist hover effects

--- a/watchlist.html
+++ b/watchlist.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="app.js"></script>
     <title>Watchlist</title>
   </head>
   <body>
@@ -21,46 +22,83 @@
     <div class="forms">
       <form class="season1">
         <div class="episodes">
-            <label>
-                <input data-points="1" type="checkbox" name="season1"/>Episode 1
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 2
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 3
-            </label>
-            <label>
-                <input data-points="1" type="checkbox" name="season1"/>Episode 4
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 5
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 6
-            </label>
-            <label>
-                <input data-points="1" type="checkbox" name="season1"/>Episode 7
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 8
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 9
-            </label>
-            <label>
-                <input data-points="1" type="checkbox" name="season1"/>Episode 10
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 11
-            </label>
-            <label>
-               <input data-points="1" type="checkbox" name="season1"/>Episode 12
-            </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 1
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 2
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 3
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 4
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 5
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 6
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 7
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 8
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 9
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 10
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 11
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 12
+          </label>
         </div>
       </form>
       <form class="season2">
-
+        <div class="episodes">
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 1
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 2
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 3
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 4
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 5
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 6
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 7
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 8
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 9
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 10
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 11
+          </label>
+          <label>
+            <input data-episode="1" type="checkbox" name="season1" />Episode 12
+          </label>
+        </div>
       </form>
     </div>
   </body>
