small gallery fix

--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
       </div>
       <div class="flex-container">
         <div class="zoom">
-          <img src="/Mitsuri.jpg" alt="" />
+          <img src="Mitsuri.jpg" alt="" />
         </div>
         <div class="zoom">
           <img src="https://i.pinimg.com/originals/3d/18/d7/3d18d7fcbeec734e427ff3129cea6531.jpg" alt="" />
